- Several changes to audio mode (AMZ):
  o Normal and SSA mode have been merged into one, all functionality available to both is now used at once. This is the same behavior as Sabbu has. (AMZ)
  o Next line on commit is now on by default.
  o Auto-commit will never change to the next line.
  o When dragging line start/end markers, they will snap to keyframes or nearby subtitle start/end markers, hold down "Shift" to override this behaviour.
  o The "Play" shortcut will always play, regardless of whether it was already playing or not. There is a new shortcut for "Stop".
  o Styles for line start/end markers have changed.
  o Holding down ctrl lets you retime the original line while in Karaoke mode.
- Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
- Fixed loading of sections with unexpected cases. (AMZ)
- Plain-text export (jfs)
- The style of the current line is automatically selected when opening the Style Manager (jfs)
- Added long-missing Edit buttons in Style Manager (jfs)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Video display fixed on Linux and maybe also Mac (Azzy)
- Misc. fixes for building on Linux (Azzy)
- libass support for subtitles on UNIX (Azzy)
- Redesigned the FexTracker configuration window (jfs)
- Framegrabs from the video now also includes framenumber in the filename (jfs)
- Scrollbar in main subs grid didn't always allow scrolling through all the subs (jfs)
- You can now no longer create a style storage whose name is invalid as a filename, instead the illegal characters are replaced with a safe character and a warning is displayed (jfs)
  o Previously those storages seemed to be created correctly, but were never written to disk and thus lost
- Added a "Auto Save on Every Change" option to config.dat (default false), that automatically saves the files whenever you change anything. (AMZ)